--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@nuxtjs/pwa": "^3.0.0-beta.20",
+    "aos": "^3.0.0-beta.6",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
