--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
+    "export": "nuxt export",
+    "serve": "nuxt serve",
     "start": "nuxt start",
-    "generate": "nuxt generate",
+    "generate": "nuxt build && nuxt export",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore ."
   },
