--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nuxt": "^2.15.4"
   },
   "devDependencies": {
+    "@mdi/js": "^5.9.55",
     "@nuxt/types": "^2.15.4",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/eslint-config": "^6.0.0",
