--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
       "~/*": ["./*"],
       "@/*": ["./*"]
     },
-    "types": ["@types/node", "@nuxt/types", "@nuxtjs/vuetify"]
+    "types": ["@types/node", "@nuxt/types"]
   },
   "exclude": ["node_modules", ".nuxt", "dist"]
 }
