--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
       "~/*": ["./*"],
       "@/*": ["./*"]
     },
-    "types": ["@types/node", "@nuxt/types"]
+    "types": ["@types/node", "@nuxt/types", "@nuxt/image"]
   },
   "exclude": ["node_modules", ".nuxt", "dist"]
 }
