✨ feat: site new design (#21)
* 🚧 wip

* 🚧 wip

* 🔥 Delete unnecessary files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
       "~/*": ["./*"],
       "@/*": ["./*"]
     },
-    "types": ["@types/node", "@nuxt/types", "@nuxtjs/vuetify"]
+    "types": ["@types/node", "@nuxt/types", "@nuxt/image"]
   },
   "exclude": ["node_modules", ".nuxt", "dist"]
 }
