--- a/package.json
+++ b/package.json
@@ -14,24 +14,25 @@
   },
   "dependencies": {
     "@nuxtjs/sitemap": "^2.4.0",
-    "aos": "^3.0.0-beta.6",
     "nuxt": "^2.15.4",
-    "tsparticles": "^1.26.2"
+    "particles.vue": "^2.43.0",
+    "twemoji": "^14.0.2"
   },
   "devDependencies": {
-    "@mdi/js": "^5.9.55",
+    "@mdi/js": "^6.6.96",
+    "@nuxt/image": "^0.6.2",
     "@nuxt/types": "^2.15.4",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/eslint-config": "^6.0.0",
     "@nuxtjs/eslint-config-typescript": "^6.0.0",
     "@nuxtjs/google-analytics": "^2.2.3",
     "@nuxtjs/pwa": "^3.3.5",
-    "@nuxtjs/vuetify": "^1.11.3",
-    "@types/aos": "^3.0.3",
+    "@nuxtjs/tailwindcss": "^5.0.2",
     "babel-eslint": "^10.0.1",
     "eslint": "^7.21.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-nuxt": ">=0.5.0",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "prettier-plugin-tailwindcss": "^0.1.8"
   }
 }
