--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "lint": "eslint --ext .ts,.js,.vue --ignore-path .gitignore .",
-    "lintfix": "eslint --fix --ext .ts,.js,.vue --ignore-path .gitignore ."
+    "lint": "eslint . --ext .ts,.js,.vue --max-warnings=0 --ignore-path .gitignore",
+    "lint-fix": "yarn prettier-fix && eslint . --fix --ext .ts,.js,.vue --max-warnings=0 --ignore-path .gitignore",
+    "prettier-check": "prettier --check .",
+    "prettier-fix": "prettier --write ."
   },
   "dependencies": {
     "@nuxtjs/sitemap": "^2.4.0",
