--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "author": "K",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build --modern",
-    "start": "nuxt start",
-    "generate": "nuxt generate --modern",
+    "dev": "nuxt dev",
+    "build": "nuxt build",
+    "preview": "nuxt preview",
+    "generate": "nuxt generate",
+    "analyze": "nuxt analyze",
     "lint": "eslint . --ext .ts,.js,.vue --max-warnings=0 --ignore-path .gitignore",
     "lint-fix": "yarn prettier-fix && eslint . --fix --ext .ts,.js,.vue --max-warnings=0 --ignore-path .gitignore",
     "prettier-check": "prettier --check .",
