--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "twemoji": "^14.0.2"
   },
   "devDependencies": {
-    "@mdi/js": "^6.6.96",
-    "@nuxt/image": "^0.6.2",
-    "@nuxtjs/eslint-config": "^6.0.0",
-    "@nuxtjs/tailwindcss": "^5.3.2",
-    "eslint": "^7.21.0",
-    "eslint-config-prettier": "^8.1.0",
+    "@mdi/js": "^7.2.96",
+    "@nuxt/image": "^1.0.0-rc.1",
+    "@nuxtjs/eslint-config": "^12.0.0",
+    "@nuxtjs/tailwindcss": "^6.8.0",
+    "eslint": "^8.47.0",
+    "eslint-config-prettier": "^9.0.0",
     "nuxt": "^3.6.5",
-    "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.13"
+    "prettier": "^3.0.2",
+    "prettier-plugin-tailwindcss": "^0.5.3"
   }
 }
