--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   },
   "devDependencies": {
     "@mdi/js": "^7.2.96",
+    "@nuxt/eslint-config": "^0.1.1",
     "@nuxt/image": "^1.0.0-rc.1",
-    "@nuxtjs/eslint-config": "^12.0.0",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^9.0.0",
