🔧 fix prettier config

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,9 @@
 {
   "semi": true,
-  "arrowParens": "always",
-  "singleQuote": true
+  "singleQuote": true,
+  "trailingComma": "es5",
+  "printWidth": 90,
+  "endOfLine": "lf",
+  "singleAttributePerLine": false,
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
