--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^9.0.0",
     "nuxt": "^3.6.5",
+    "nuxt-simple-sitemap": "^3.1.7",
     "prettier": "^3.0.2",
     "prettier-plugin-tailwindcss": "^0.5.3"
   }
