--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,7 @@
   "semi": true,
   "singleQuote": true,
   "trailingComma": "es5",
-  "printWidth": 90,
+  "printWidth": 100,
   "endOfLine": "lf",
-  "plugins": ["prettier-plugin-tailwindcss"]
+  "singleAttributePerLine": false
 }
