--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
   "devDependencies": {
     "@mdi/js": "^7.4.47",
     "@nuxt/eslint-config": "^0.2.0",
+    "@nuxtjs/sitemap": "^5.1.0",
     "@nuxtjs/tailwindcss": "^6.11.4",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "nuxt": "^3.10.2",
-    "nuxt-simple-sitemap": "^4.1.7",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11"
   }
