--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint": "eslint . --max-warnings=0",
     "lint-fix": "pnpm prettier-fix && eslint . --fix",
     "prettier-check": "prettier --check src/",
-    "prettier-fix": "prettier --write src/"
+    "prettier-fix": "prettier --write src/",
+    "postinstall": "nuxt prepare"
   },
   "dependencies": {
     "twemoji": "^14.0.2"
@@ -25,7 +26,7 @@
     "@nuxtjs/tailwindcss": "^6.12.0",
     "eslint": "^9.6.0",
     "eslint-config-prettier": "^9.1.0",
-    "nuxt": "^3.10.2",
+    "nuxt": "^3.12.2",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5"
   }
