--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nuxtjs/sitemap": "^5.2.2",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "eslint": "^9.6.0",
+    "eslint-plugin-format": "^0.1.2",
     "eslint-plugin-tailwindcss": "^3.17.4",
     "nuxt": "^3.12.2"
   }
