--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "^9.6.0",
     "eslint-plugin-format": "^0.1.2",
     "eslint-plugin-tailwindcss": "^3.17.4",
-    "nuxt": "^3.12.2"
+    "nuxt": "^3.12.2",
+    "typescript": "^5.5.3"
   }
 }
