--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "lint-fix": "eslint . --fix",
     "postinstall": "nuxt prepare"
   },
+  "dependencies": {
+    "@nuxt/fonts": "^0.7.1"
+  },
   "devDependencies": {
     "@antfu/eslint-config": "^2.22.0",
     "@mdi/js": "^7.4.47",
