--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.0.0",
-    "@mdi/js": "^7.4.47",
+    "@iconify/json": "^2.2.242",
     "@nuxt/eslint": "^0.5.4",
+    "@nuxt/icon": "^1.5.0",
     "@nuxtjs/sitemap": "^5.3.5",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "eslint": "^9.9.1",
