--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "k-urtica.github.io",
+  "type": "module",
   "version": "1.0.0",
   "private": true,
   "description": "K portfolio site.",
