--- a/package.json
+++ b/package.json
@@ -16,19 +16,24 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxt/fonts": "^0.7.2"
+    "@nuxt/fonts": "^0.11.2",
+    "@nuxtjs/robots": "^5.2.10",
+    "@nuxtjs/sitemap": "^7.2.10",
+    "@unhead/vue": "^2.0.8",
+    "nuxt": "^3.17.2",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.2.0",
+    "@antfu/eslint-config": "^4.13.0",
     "@iconify/json": "^2.2.244",
-    "@nuxt/eslint": "^0.5.5",
-    "@nuxt/icon": "^1.5.1",
-    "@nuxtjs/sitemap": "^6.0.1",
-    "@nuxtjs/tailwindcss": "^6.12.1",
-    "eslint": "^9.9.1",
-    "eslint-plugin-format": "^0.1.2",
-    "eslint-plugin-tailwindcss": "^3.17.4",
-    "nuxt": "^3.13.1",
-    "typescript": "^5.5.4"
+    "@nuxt/eslint": "^1.3.0",
+    "@nuxt/icon": "^1.12.0",
+    "@nuxtjs/tailwindcss": "^6.14.0",
+    "eslint": "^9.26.0",
+    "eslint-plugin-format": "^1.0.1",
+    "eslint-plugin-tailwindcss": "^3.18.0",
+    "typescript": "^5.8.3"
   }
+
 }
