--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "analyze": "nuxt analyze",
     "lint": "eslint .",
     "lint-fix": "eslint . --fix",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "prepare": "husky"
   },
   "dependencies": {
     "@nuxt/fonts": "^0.11.2",
@@ -25,15 +26,18 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.13.0",
     "@iconify/json": "^2.2.244",
     "@nuxt/eslint": "^1.3.0",
     "@nuxt/icon": "^1.12.0",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "eslint": "^9.26.0",
-    "eslint-plugin-format": "^1.0.1",
-    "eslint-plugin-tailwindcss": "^3.18.0",
+    "eslint-config-prettier": "^10.1.3",
+    "eslint-plugin-import-x": "^4.11.0",
+    "eslint-plugin-unused-imports": "^4.1.4",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.2",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "typescript": "^5.8.3"
   }
-
 }
