--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
   "printWidth": 90,
   "endOfLine": "lf",
   "singleAttributePerLine": false,
-  "plugins": ["prettier-plugin-tailwindcss"]
+  "plugins": ["prettier-plugin-tailwindcss"],
+  "tailwindStylesheet": "./app/assets/main.css"
 }
