--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@nuxt/fonts": "^0.11.2",
+    "@nuxt/ui": "3.1.1",
     "@nuxtjs/robots": "^5.2.10",
     "@nuxtjs/sitemap": "^7.2.10",
     "@unhead/vue": "^2.0.8",
@@ -26,10 +26,9 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@iconify/json": "^2.2.244",
+    "@iconify-json/lucide": "^1.2.41",
+    "@iconify-json/mdi": "^1.2.3",
     "@nuxt/eslint": "^1.3.0",
-    "@nuxt/icon": "^1.12.0",
-    "@nuxtjs/tailwindcss": "^6.14.0",
     "eslint": "^9.26.0",
     "eslint-config-prettier": "^10.1.3",
     "eslint-plugin-import-x": "^4.11.0",
