--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nuxtjs/robots": "^5.2.10",
     "@nuxtjs/sitemap": "^7.2.10",
     "@unhead/vue": "^2.0.8",
+    "motion-v": "1.1.0-alpha.0",
     "nuxt": "^3.17.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
