--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@unhead/vue": "^2.0.8",
     "motion-v": "1.1.0-alpha.0",
     "nuxt": "^3.17.2",
+    "nuxt-og-image": "^5.1.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
