--- a/package.json
+++ b/package.json
@@ -13,22 +13,32 @@
     "analyze": "nuxt analyze",
     "lint": "eslint .",
     "lint-fix": "eslint . --fix",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "prepare": "husky"
   },
   "dependencies": {
-    "@nuxt/fonts": "^0.7.2"
+    "@nuxt/ui": "3.1.1",
+    "@nuxtjs/robots": "^5.2.10",
+    "@nuxtjs/sitemap": "^7.2.10",
+    "@unhead/vue": "^2.0.8",
+    "motion-v": "1.1.0-alpha.0",
+    "nuxt": "^3.17.2",
+    "nuxt-og-image": "^5.1.3",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.2.0",
-    "@iconify/json": "^2.2.244",
-    "@nuxt/eslint": "^0.5.5",
-    "@nuxt/icon": "^1.5.1",
-    "@nuxtjs/sitemap": "^6.0.1",
-    "@nuxtjs/tailwindcss": "^6.12.1",
-    "eslint": "^9.9.1",
-    "eslint-plugin-format": "^0.1.2",
-    "eslint-plugin-tailwindcss": "^3.17.4",
-    "nuxt": "^3.13.1",
-    "typescript": "^5.5.4"
+    "@iconify-json/lucide": "^1.2.41",
+    "@iconify-json/mdi": "^1.2.3",
+    "@nuxt/eslint": "^1.3.0",
+    "eslint": "^9.26.0",
+    "eslint-config-prettier": "^10.1.3",
+    "eslint-plugin-import-x": "^4.11.0",
+    "eslint-plugin-unused-imports": "^4.1.4",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.2",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "typescript": "^5.8.3"
   }
 }
