--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "preview": "nuxt preview",
     "generate": "nuxt generate",
     "analyze": "nuxt analyze",
-    "lint": "eslint .",
-    "lint-fix": "eslint . --fix",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
     "postinstall": "nuxt prepare",
     "prepare": "husky"
   },
@@ -28,17 +28,16 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^4.13.0",
     "@iconify-json/lucide": "^1.2.43",
     "@iconify-json/mdi": "^1.2.3",
     "@nuxt/eslint": "^1.3.1",
     "eslint": "^9.26.0",
-    "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-import-x": "^4.11.1",
-    "eslint-plugin-unused-imports": "^4.1.4",
+    "eslint-plugin-format": "^1.0.1",
+    "eslint-plugin-readable-tailwind": "^2.1.1",
+    "eslint-plugin-tailwindcss": "^3.18.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.0.0",
-    "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.11",
     "typescript": "^5.8.3"
   }
 }
