--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
   "dependencies": {
     "@nuxt/ui": "3.1.2",
     "@nuxtjs/robots": "^5.2.10",
-    "@nuxtjs/sitemap": "^7.2.10",
-    "@unhead/vue": "^2.0.8",
-    "motion-v": "1.1.0-alpha.1",
-    "nuxt": "^3.17.3",
-    "nuxt-og-image": "^5.1.3",
+    "@nuxtjs/sitemap": "^7.3.0",
+    "@unhead/vue": "^2.0.10",
+    "motion-v": "^1.1.1",
+    "nuxt": "^3.17.4",
+    "nuxt-og-image": "^5.1.4",
     "vue": "^3.5.14",
     "vue-router": "^4.5.1"
   },
@@ -30,7 +30,7 @@
     "@antfu/eslint-config": "^4.13.1",
     "@iconify-json/lucide": "^1.2.44",
     "@iconify-json/mdi": "^1.2.3",
-    "@nuxt/eslint": "^1.4.0",
+    "@nuxt/eslint": "^1.4.1",
     "eslint": "^9.27.0",
     "eslint-plugin-format": "^1.0.1",
     "eslint-plugin-readable-tailwind": "^2.1.2",
