feat: replace readable-tailwind with better-tailwindcss

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,7 +19,7 @@
     { "rule": "*-newline", "severity": "off", "fixable": true },
     { "rule": "*quotes", "severity": "off", "fixable": true },
     { "rule": "*semi", "severity": "off", "fixable": true },
-    { "rule": "readable-tailwind/*", "severity": "off", "fixable": true }
+    { "rule": "better-tailwindcss/*", "severity": "off", "fixable": true }
   ],
 
   "eslint.validate": [
