--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "version": "1.0.0",
   "private": true,
+  "packageManager": "pnpm@10.13.1",
   "description": "K portfolio site.",
   "author": "K",
   "scripts": {
@@ -16,23 +17,23 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxt/ui": "3.2.0",
+    "@nuxt/ui": "3.3.0",
     "@nuxtjs/robots": "^5.4.0",
     "@nuxtjs/sitemap": "^7.4.3",
     "@unhead/vue": "^2.0.12",
-    "motion-v": "^1.5.0",
-    "nuxt": "^4.0.0",
+    "motion-v": "^1.6.1",
+    "nuxt": "^4.0.2",
     "nuxt-og-image": "^5.1.9",
-    "vue": "^3.5.17",
+    "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.17.0",
-    "@iconify-json/lucide": "^1.2.57",
+    "@antfu/eslint-config": "^5.0.0",
+    "@iconify-json/lucide": "^1.2.58",
     "@iconify-json/mdi": "^1.2.3",
-    "@nuxt/eslint": "^1.5.2",
-    "eslint": "^9.31.0",
-    "eslint-plugin-better-tailwindcss": "^3.6.2",
+    "@nuxt/eslint": "^1.7.1",
+    "eslint": "^9.32.0",
+    "eslint-plugin-better-tailwindcss": "^3.7.2",
     "eslint-plugin-format": "^1.0.1",
     "lint-staged": "^16.1.2",
     "simple-git-hooks": "^2.13.0",
