feat: simplify SEO management with nuxt seo module

--- a/package.json
+++ b/package.json
@@ -18,12 +18,10 @@
   },
   "dependencies": {
     "@nuxt/ui": "3.3.0",
-    "@nuxtjs/robots": "^5.4.0",
-    "@nuxtjs/sitemap": "^7.4.3",
+    "@nuxtjs/seo": "^3.1.0",
     "@unhead/vue": "^2.0.12",
     "motion-v": "^1.6.1",
     "nuxt": "^4.0.2",
-    "nuxt-og-image": "^5.1.9",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
